Fix overflowing content

--- a/frontend/src/components/Drawer.scss
+++ b/frontend/src/components/Drawer.scss
@@ -9,7 +9,8 @@ body:has(.smart-hub-drawer--open) {
 }
 
 .smart-hub-drawer > div {
-  min-height: 100%;
+  flex-direction: column;
+  flex: 1;
   width: 33%;
 }
 
